# jeonghyeon.net

./: .gitignore  CLAUDE.md  Makefile
.github/workflows/: deploy.yml
content/: 404.md  index.md  index.yaml  robots.txt
content/_layout/: footer.md  header.md
content/_layout/footer/: index.md
content/_layout/header/: index.md
content/blog/: index.md
content/blog/building-a-static-site/: index.md
content/blog/hello-world/: index.md
content/playlist/: index.md
content/playlists/: index.md
content/playlists/chill-vibes/: index.md
content/playlists/coding-music/: index.md
content/playlists/cory-wong/: index.md
content/playlists/sakanaction/: index.md
content/playlists/t-square/: index.md
content/playlists/test/: index.md
content/playlists/vulfpeck/: index.md
content/posts/: index.md
content/resume/: index.md
editor/: index.html  package.json  pnpm-lock.yaml
editor/src/: App.css  App.tsx  main.tsx
editor/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: files.rs  git.rs  image.rs  lib.rs  preview.rs  pty.rs  util.rs
hooks/: pre-commit  pre-push
transformer/: go.mod  go.sum  main.go
transformer/auto-index/: autoindex.go  autoindex_test.go
transformer/content-linter/: contentlinter.go  contentlinter_test.go
transformer/html-minifier/: htmlminifier.go  htmlminifier_test.go
transformer/markdown-util/: markdownutil.go  markdownutil_test.go
transformer/md-to-html/: mdtohtml.go  mdtohtml_test.go
(+129 files in other folders)
