[package]
name = "editor"
version = "0.1.0"
description = "jeonghyeon.net Editor"
authors = ["jeonghyeon"]
edition = "2021"

[lib]
name = "editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
notify = { version = "7", features = ["macos_fsevent"] }
